--- a/MyApplication/app/src/main/res/values-night/strings.xml
+++ b/MyApplication/app/src/main/res/values-night/strings.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">My Application</string>
     <string name="enter_your_name_hint">Enter Your Name</string>
     <string name="button_show_name">Show Name</string>
 </resources>
